--- a/Index.html
+++ b/Index.html
@@ -7,11 +7,22 @@
     <link href="assets/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <div>
-      <h1>Hello, world!</h1>
-    </div>
-    
-
+    <style>
+      div.grid
+      {
+        background: #ffd1c2;
+        border: 2px solid #f16234;
+        height: 50px;
+      }
+    </style>
+    <head>
+      <body>
+        
+      <div class="container">
+        <div class="row">
+          <div class="col grid"></div>
+        </div>
+      </div>
    
     <script src="assets/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="assets/bootstrap.min.js" crossorigin="anonymous"></script>
