--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="assets/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Bootstrap-grid</title>
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <style>
@@ -21,11 +21,33 @@
       <div class="container">
         <div class="row">
           <div class="col grid"></div>
+          <div class="col grid"></div>
+          <div class="col grid"></div>
+          <div class="col grid"></div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col grid"></div>
+          <div class="col grid"></div>
+          <div class="col grid"></div>
+          <div class="col grid"></div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 grid"></div>
+          <div class="col-sm-1 grid"></div>
+          <div class="col-md-5 grid"></div>
+          <div class="col-lg-4 grid"></div>
+          <div class="col-xl-2 grid"></div>
         </div>
       </div>
    
-    <script src="assets/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="assets/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="assets/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="assets/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="assets/js/bootstrap.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
