--- a/table.html
+++ b/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" >
     <title>Bootstrap-table</title>
 </head>
 <body> 
@@ -46,8 +46,8 @@
             </tr>
         </tfoot>
     </table>
-    <script src="assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src="assets/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="assets/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
